<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".employees">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/namemployee"
        android:layout_width="256dp"
        android:layout_height="50dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameemployee"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/employeadress"
        android:layout_width="256dp"
        android:layout_height="50dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namemployee">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/employeeadress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/adress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/employeemail"
        android:layout_width="262dp"
        android:layout_height="63dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employeadress">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/employeeemail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/e_mail" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phonemployee"
        android:layout_width="256dp"
        android:layout_height="65dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employeemail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneemployee"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone_number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/saveemployee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="88dp"
        android:onClick="SaveEmployee"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phonemployee" />

    <Button
        android:id="@+id/cancelemployee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="76dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phonemployee" />

</androidx.constraintlayout.widget.ConstraintLayout>