<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditEmployee">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edinamemployee"
        android:layout_width="256dp"
        android:layout_height="61dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="96dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edinameemployee"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editemployeadress"
        android:layout_width="256dp"
        android:layout_height="64dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edinamemployee">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editemployeeadress"
            android:layout_width="244dp"
            android:layout_height="56dp"
            android:hint="@string/adress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editemployeemail"
        android:layout_width="262dp"
        android:layout_height="67dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editemployeadress">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editemployeeemail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/e_mail" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editphoneemploye"
        android:layout_width="261dp"
        android:layout_height="77dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editemployeemail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editphoneemployee"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone_number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/editsaveemployee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="52dp"
        android:onClick="saveemployeeedit"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editphoneemploye" />

    <Button
        android:id="@+id/editcancelemployee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="108dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editphoneemploye" />

</androidx.constraintlayout.widget.ConstraintLayout>